# nomeolvides

./: .gitignore  .travis.yml  AUTHORS  AUTORES  Cambios  ChangeLog  Makefile.am  NEWS  NOVEDADES  config.rpath  configure.ac  meson.build
config/: config.vapi
data/: Makefile.am  ar.com.softwareperonista.Nomeolvides-git.appdata.xml.in  ar.com.softwareperonista.Nomeolvides-git.desktop.in.in  ar.com.softwareperonista.Nomeolvides.appdata.xml.in  ar.com.softwareperonista.Nomeolvides.desktop.in.in  meson.build  nomeolvides.appdata.xml.in  nomeolvides.desktop.in.in
icon/: meson.build
po/: Makevars  POTFILES  POTFILES.in  POTFILES.skip  es.po  meson.build  nomeolvides.pot
scripts/: cambiar_version  crear-potfiles  pre-commit
src/: Makefile.am  meson.build  nomeolvides-acciones-db.vala  nomeolvides-actionbar.ui  nomeolvides-actionbar.vala  nomeolvides-app.vala  nomeolvides-archivo.vala  nomeolvides-base-de-datos.vala  nomeolvides-base.vala  nomeolvides-boton.ui  nomeolvides-boton.vala  nomeolvides-coleccion.vala  nomeolvides-configuracion.vala  nomeolvides-datos.vala  nomeolvides-deshacer-item.vala  nomeolvides-deshacer.vala  nomeolvides-dialog-archivo-abrir.vala  nomeolvides-dialog-archivo-guardar.vala  nomeolvides-dialog-base-borrar.vala  nomeolvides-dialog-base.vala  nomeolvides-dialog-coleccion-agregar.vala  nomeolvides-dialog-coleccion-borrar.vala  nomeolvides-dialog-coleccion-editar.vala  nomeolvides-dialog-coleccion.vala  nomeolvides-dialog-hecho-agregar.vala  nomeolvides-dialog-hecho-borrar.vala  nomeolvides-dialog-hecho-editar.vala  nomeolvides-dialog-hecho-lista-agregar.ui  nomeolvides-dialog-hecho-lista-agregar.vala  nomeolvides-dialog-hecho-lista-borrar.vala  nomeolvides-dialog-hecho.ui  nomeolvides-dialog-hecho.vala  nomeolvides-dialog-hechos-importar.ui  nomeolvides-dialog-hechos-importar.vala  nomeolvides-dialog-lista-agregar.vala  nomeolvides-dialog-lista-borrar.vala  nomeolvides-dialog-lista-editar.vala  nomeolvides-dialog-lista.vala  nomeolvides-dialog-migrador.vala  nomeolvides-dialog-preferencias.vala  (+58 more)
ui/: meson.build  nomeolvides-dialog-hecho-borrar.ui  nomeolvides-dialog-hecho.ui  nomeolvides-interfaz-principal.ui  nomeolvides-popover-base-borrar.ui  nomeolvides-popover-coleccion-agregar.ui  nomeolvides-popover-lista-agregar.ui  nomeolvides-preferencias-base.ui  nomeolvides-toolbar.ui  nomeolvides-treeview-colecciones.ui  nomeolvides-ventana-principal.ui
