sources = files ([
  'nomeolvides-acciones-db.vala',
  'nomeolvides-app.vala',
  'nomeolvides-archivo.vala',
  'nomeolvides-base-de-datos.vala',
  'nomeolvides-base.vala',
  'nomeolvides-boton.vala',
  'nomeolvides-coleccion.vala',
  'nomeolvides-configuracion.vala',
  'nomeolvides-datos.vala',
  'nomeolvides-deshacer-item.vala',
  'nomeolvides-deshacer.vala',
  'nomeolvides-dialog-archivo-abrir.vala',
  'nomeolvides-dialog-archivo-guardar.vala',
  'nomeolvides-dialog-coleccion.vala',
  'nomeolvides-dialog-hecho-agregar.vala',
  'nomeolvides-dialog-hecho-borrar.vala',
  'nomeolvides-dialog-hecho-editar.vala',
  'nomeolvides-dialog-hecho-lista-agregar.vala',
  'nomeolvides-dialog-hecho-lista-borrar.vala',
  'nomeolvides-dialog-hechos-importar.vala',
  'nomeolvides-dialog-hecho.vala',
  'nomeolvides-dialog-lista.vala',
  'nomeolvides-dialog-migrador.vala',
  'nomeolvides-dialog-preferencias.vala',
  'nomeolvides-fecha.vala',
  'nomeolvides-headerbar.vala',
  'nomeolvides-hecho.vala',
  'nomeolvides-interfaz-principal.vala',
  'nomeolvides-lista.vala',
  'nomeolvides-liststore-anios.vala',
  'nomeolvides-liststore-base.vala',
  'nomeolvides-liststore-colecciones.vala',
  'nomeolvides-liststore-hechos.vala',
  'nomeolvides-liststore-listas.vala',
  'nomeolvides-main.vala',
  'nomeolvides-notebook-anios-listas.vala',
  'nomeolvides-popover-base-borrar.vala',
  'nomeolvides-popover-base.vala',
  'nomeolvides-popover-coleccion-agregar.vala',
  'nomeolvides-popover-coleccion-borrar.vala',
  'nomeolvides-popover-coleccion-editar.vala',
  'nomeolvides-popover-lista-agregar.vala',
  'nomeolvides-popover-lista-borrar.vala',
  'nomeolvides-popover-lista-editar.vala',
  'nomeolvides-portada.vala',
  'nomeolvides-preferencias-base.vala',
  'nomeolvides-preferencias-colecciones.vala',
  'nomeolvides-preferencias-listas.vala',
  'nomeolvides-selector-fecha.vala',
  'nomeolvides-sqlite.vala',
  'nomeolvides-stack-hechos-dialog.vala',
  'nomeolvides-toolbar.vala',
  'nomeolvides-treeview-anios.vala',
  'nomeolvides-treeview-base.vala',
  'nomeolvides-treeview-colecciones.vala',
  'nomeolvides-treeview-hechos.vala',
  'nomeolvides-utiles.vala',
  'nomeolvides-ventana-principal.vala',
])

executable('nomeolvides',
            sources,
            config_data,
            gresources,
            vala_args: '--target-glib=2.50',
            dependencies: deps,
            include_directories : config_dir,
            install: true,
)